Deprecating them completely will thus require changing the format of NET files.
* Unnamed rules are now given automatic names beginning with "<big><tt>_R</tt></big>" followed by a
digit (e.g., "<big><tt>_R1</tt></big>", "<big><tt>_R2</tt></big>", etc.).
* Reverse rules are now named by prepending "<big><tt>_reverse_</tt></big>" to the forward rule name.

==== Bug Fixes ====
* An error is now thrown if an unrecognized block name is encountered.
* An error is now thrown if duplicate rule names are detected.

==== Minor Changes ====
* Both the BioNetGen version and codename (e.g., "<big><tt>2.2.6-stable</tt></big>") are now included 
in the headers of files written with <big><tt>writeBNGL</tt></big> (e.g., NET files).
* validate_examples.pl now ignores trailing comments in file comparisons.
* Windows executables now contain the bitness of the architecture in their names 
(e.g., <big><tt>run_network_MSWin32-64bit.exe</tt></big>).

== BioNetGen-2.2.6-testing ==
'''''2015 March 3'''''

==== New Features ====

===== SBML-to-BNGL Translator =====
* The SBML-to-BNGL translator can perform both a flat (one-to-one) translation 
of an SBML model in terms of unstructured species and an "atomized" translation 
that recovers the implicit molecular structure (binding sites and states) of the 
species within the model. The translator can be accessed in the following three ways:
# Using the readFile() BioNetGen action: The 'atomize' argument specifies whether a 
flat or atomized translation is to be performed (default is flat, i.e., 
<big><tt>atomize=>0</tt></big>). The translated model is written to [sbml_filename].bngl, 
which is then read and loaded into memory. This allows additional actions [e.g., simulate(), 
parameter_scan()] to be performed on the model if desired.  See the 
[[BioNetGen_Actions_and_Arguments | BioNetGen Actions & Arguments Guide]] for a comprehensive 
listing of all actions and arguments, including readFile().