@@ -21,9 +21,12 @@ Deprecating them completely will thus require changing the format of NET files.
 digit (e.g., "<big><tt>_R1</tt></big>", "<big><tt>_R2</tt></big>", etc.).
 * Reverse rules are now named by prepending "<big><tt>_reverse_</tt></big>" to the forward rule name.
 
-==== Bug Fixes ====
-* An error is now thrown if an unrecognized block name is encountered.
-* An error is now thrown if duplicate rule names are detected.
+===== Actions & Arguments =====
+* Added a new argument, <big><tt>par_scan_vals</tt></big>, to the <big><tt>parameter_scan</tt></big>
+action to allow parameter scans over unevenly spaced intervals.
+** Example: <big><tt>parameter_scan({method=>"ode", t_end=>20, parameter=>"k1", par_scan_vals=>[1,5,20]})</tt></big>
+** NOTE: If <big><tt>par_min</tt></big>, <big><tt>par_max</tt></big>, and <big><tt>n_scan_pts</tt></big> 
+are all defined, they will take precedence over <big><tt>par_scan_vals</tt></big> if it is defined.
 
 ==== Minor Changes ====
 * Both the BioNetGen version and codename (e.g., "<big><tt>2.2.6-stable</tt></big>") are now included 
@@ -31,6 +34,10 @@ in the headers of files written with <big><tt>writeBNGL</tt></big> (e.g., NET fi
 * validate_examples.pl now ignores trailing comments in file comparisons.
 * Windows executables now contain the bitness of the architecture in their names 
 (e.g., <big><tt>run_network_MSWin32-64bit.exe</tt></big>).
+
+==== Bug Fixes ====
+* An error is now thrown if an unrecognized block name is encountered.
+* An error is now thrown if duplicate rule names are detected.
 
 == BioNetGen-2.2.6-testing ==
 '''''2015 March 3'''''
